# TTRS-final

./: .gitignore  CMakeLists.txt  README.md  run.sh
TicketBookingApp/app/: build.gradle
TicketBookingApp/app/src/androidTest/java/com/ttrs/ticketbookingapp/: ExampleInstrumentedTest.java
TicketBookingApp/app/src/main/: AndroidManifest.xml
TicketBookingApp/app/src/main/assets/: all.in
TicketBookingApp/app/src/main/java/com/ttrs/ticketbookingapp/: BaseActivity.java  MainActivity.java
TicketBookingApp/app/src/main/res/layout/: activity_base.xml  activity_login.xml  activity_modify_train_1.xml  activity_modify_train_2.xml  activity_my_ticket.xml  activity_query_ticket.xml  activity_query_train.xml  activity_register.xml  activity_ticket_info.xml  activity_user_setting.xml  add_station.xml  content_main.xml  nav_header_main.xml  ticket_item.xml  train_item.xml
TicketBookingApp/app/src/main/res/menu/: activity_main_drawer.xml
TicketBookingApp/app/src/main/res/values/: arrays.xml  commands.xml  locations.xml  login_strings.xml  modify_train_strings.xml  query_ticket_strings.xml  query_train_strings.xml  register_strings.xml  strings.xml  ticket_strings.xml  userSettings_strings.xml
TicketBookingApp/gradle/wrapper/: gradle-wrapper.properties
backend/: util.cpp  util.h
backend/console-application/: Console.cpp  Console.h  TicketManager.cpp  TicketManager.h  TicketQuery.cpp  TicketQuery.h  TrainManager.cpp  TrainManager.h  UserManager.hpp  classTester.cpp  server.cpp  user.cpp  user.h
backend/resource/src/buffer/: buffer_pool_manager.cpp  lru_replacer.cpp
backend/resource/src/common/: config.cpp
backend/resource/src/concurrency/: transaction_manager.cpp
backend/resource/src/disk/: disk_manager.cpp
backend/resource/src/hash/: hash_method.cpp
backend/resource/src/include/buffer/: buffer_pool_manager.h  lru_replacer.h  replacer.h
backend/resource/src/include/common/: config.h  exception.h  logger.h  rid.h
backend/resource/src/include/concurrency/: transaction.h  transaction_manager.h
backend/resource/src/include/disk/: disk_manager.h
backend/resource/src/include/hash/: extendible_hash.h  hash_method.h  hash_table.h
backend/resource/src/include/logging/: log_manager.h  log_record.h  log_recovery.h
backend/resource/src/include/page/: directory_page.hpp  header_page.h  page.h  table_page.h
backend/resource/src/include/table/: table_heap.h  table_iterator.h  tuple.h
backend/resource/src/logging/: log_manager.cpp  log_recovery.cpp
backend/resource/src/page/: header_page.cpp  table_page.cpp
backend/resource/src/table/: new_table_heap.cpp  tuple.cpp
backend/util/: MemoryController.cpp  MemoryController.h  array.hpp  bptree.hpp  bptreetest.cpp  exceptions.hpp  list.hpp  map.hpp  string.hpp  stringtest.cpp  utility.hpp  vector.hpp
doc/: WEB TTRS 用户手册.md  Web Dev.md  Web TTRS开发文档.md  后端设计.docx  火车订票系统Android App用户手册.md  火车订票系统AndroidApp开发文档.md
web/: app.py  client.py
web/blueprint/: AdminSystem.py  TicketSystem.py  TrainSystem.py  UserSystem.py  utility.py
web/static/js/: bootstrap-material-design.js
web/templates/: Todo.txt  add_train.html  admin.html  base.html  delete_train.html  login.html  main.html  modify_train.html  profile.html  query_result.html  query_ticket.html  query_train.html  register.html  sale_train.html  settings.html  train_result.html
(+22 files in other folders)
